(library
 (public_name dream.http)
 (name dream__http)
 (libraries
  bigarray-compat
  bigstringaf
  digestif
  dream.cipher
  dream.localhost
  dream.middleware
  dream-pure
  dream.dream-gluten
  dream.dream-gluten-lwt-unix
  dream.dream-h2
  dream.dream-h2-lwt-unix
  dream.dream-httpaf
  dream.dream-httpaf-lwt-unix
  lwt
  lwt.unix
  lwt_ssl
  ssl
  dream.websocketaf
 )
 (preprocess (pps lwt_ppx))
 (instrumentation (backend bisect_ppx)))
