(library
 (public_name dream-mirage)
 (name dream__mirage)
 (libraries
  bigarray-compat
  bigstringaf
  digestif
  dream.cipher
  dream.localhost
  dream.middleware
  dream-pure
  dream.h2
  dream.httpaf
  lwt
  dream-mirage.dream-paf
  dream-mirage.dream-paf.alpn
  dream-mirage.dream-paf.mirage
 )
 (preprocess (pps lwt_ppx))
 (instrumentation (backend bisect_ppx)))
